# Ghostty-Name-Picker

./: .env.sample  .gcloudignore  .gitignore  Makefile  README.md  app.yaml  flake.nix  ghost_names.csv  main.py  pyproject.toml  requirements.txt  settings.py
models/: Ghost.py  User.py
static/css/: main.css
templates/: _base.html  ghost_form.html  ghost_name_picker.html  index.html
